2006-10-29  Steve Huntley  <stephen.huntley@alum.mit.edu>

	Added comments and license info:
	* library/template/globfind.tcl
	* library/template/tdelta.tcl

2006-10-23  Steve Huntley  <stephen.huntley@alum.mit.edu>

	Initial upload of template virtual filesystems in new subfolder:
	* library/template/collatevfs.tcl
	* library/template/deltavfs.tcl
	* library/template/fishvfs.tcl
	* library/template/quotavfs.tcl
	* library/template/templatevfs.tcl
	* library/template/versionvfs.tcl

	Plus helper utlities:
	* library/template/tdelta.tcl - required by deltavfs.tcl
	* library/template/globfind.tcl - required by quotavfs.tcl

	* library/pkgIndex.tcl - added "package ifneeded" statements for
	template virtual filesystems.

2006-09-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl (vfs::http::geturl): wrapper around
	http::geturl that does 404 check.

2006-09-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl (vfs::http::urlparse): add method to
	deconstruct the url using RFC 3986 semantics.
	(vfs::http::Mount): add support for HTTP basic auth if a user was
	passed in the url

2006-09-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/pkgIndex.tcl: bump vfs::http to 0.6
	* library/httpvfs.tcl:  Add urlname encoding to handle the
	translation of "/foo/my file (2).txt" as
	foo/my%20file%20%282%29.txt, per RFC 3986, for the user.  This is
	controlled via a new ?-urlencode bool? mount option, default 1.
		**** POTENTIAL INCOMPATIBILITY ****
		**** if user was "working around" at [open] level ****

2006-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/httpvfs.tcl: rewritten to clean up http tokens and
	actually interpret data from them.
	(Mount): If a url doesn't return "ok" status, return failure.
	(stat, access): If HEAD returns 404 or status != ok, return ENOENT.

	* library/vfslib.tcl: code cleanup

2006-08-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/vfs.c: move static globals to being thread-specific.  If